--- a/TCPIP/app/src/main/AndroidManifest.xml
+++ b/TCPIP/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tcpip">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
@@ -12,10 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TCPIP"
         android:usesCleartextTraffic="true">
+        <service android:name=".MyFService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
